--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Notes</string>
+    <string name="date_format">E, dd MMM HH:mm</string>
+    <string name="note_tools_body_text">Some body text</string>
+    <string name="notes_tools_date_text">Date text</string>
+    <string name="notes_title_text">Title text</string>
 </resources>
