--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="note_tools_body_text">Some body text</string>
     <string name="notes_tools_date_text">Date text</string>
     <string name="notes_title_text">Title text</string>
+    <string name="note_title">Title</string>
+    <string name="note_body">Note</string>
+    <string name="new_note">New note</string>
 </resources>
